[gd_scene load_steps=6 format=3 uid="uid://me31tyggjdy4"]

[ext_resource type="Script" uid="uid://dt15eegl850rw" path="res://general_ui/hud/hud.gd" id="1_hk4rq"]
[ext_resource type="PackedScene" uid="uid://26g0tisiojj8" path="res://general_ui/hud/ToolUI.tscn" id="2_br5ty"]
[ext_resource type="PackedScene" uid="uid://nebwwifttxrv" path="res://general_ui/hud/money_counter.tscn" id="3_kafub"]
[ext_resource type="PackedScene" uid="uid://8ccoultreyuc" path="res://seed_bag/seed_bag.tscn" id="4_kafub"]
[ext_resource type="Script" uid="uid://cwejy8567ny70" path="res://enums/tools/tool_enums.gd" id="5_2jgvt"]

[node name="hud" type="Control" node_paths=PackedStringArray("tool_enum")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hk4rq")
tool_enum = NodePath("ToolEnums")

[node name="ToolUI" parent="." instance=ExtResource("2_br5ty")]
layout_mode = 1

[node name="MoneyCounter" parent="." instance=ExtResource("3_kafub")]
layout_mode = 1

[node name="SeedBag" parent="." instance=ExtResource("4_kafub")]
layout_mode = 1
offset_left = 1709.0
offset_top = 442.0
offset_right = 1709.0
offset_bottom = 442.0

[node name="ToolEnums" type="Node" parent="."]
script = ExtResource("5_2jgvt")
metadata/_custom_type_script = "uid://cwejy8567ny70"
